{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 25,
  "lineage": "c5c146dc-5e72-4402-7cf4-78abc49a7e69",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "levelup-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026f19fa3ff304378",
            "arn": "arn:aws:ec2:us-east-2:053022822739:elastic-ip/eipalloc-026f19fa3ff304378",
            "association_id": "eipassoc-06d449f8032afe28f",
            "domain": "vpc",
            "id": "eipalloc-026f19fa3ff304378",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05c8f194ee1c94398",
            "private_dns": "ip-10-0-1-135.us-east-2.compute.internal",
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-52-15-239-130.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.239.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "levelup-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:internet-gateway/igw-0e74bcc6a49350fd2",
            "id": "igw-0e74bcc6a49350fd2",
            "owner_id": "053022822739",
            "tags": {
              "Name": "levelup-gw"
            },
            "tags_all": {
              "Name": "levelup-gw"
            },
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "levelup-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026f19fa3ff304378",
            "association_id": "eipassoc-06d449f8032afe28f",
            "connectivity_type": "public",
            "id": "nat-0d3b7ebddb25e5eeb",
            "network_interface_id": "eni-05c8f194ee1c94398",
            "private_ip": "10.0.1.135",
            "public_ip": "52.15.239.130",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04a2f8ac7a3e28a2b"
          },
          "dependencies": [
            "aws_eip.levelup-nat",
            "aws_internet_gateway.levelup-gw",
            "aws_subnet.levelupvpc-public-1",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "levelup-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:route-table/rtb-0ca65cf1fb8fb7dac",
            "id": "rtb-0ca65cf1fb8fb7dac",
            "owner_id": "053022822739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d3b7ebddb25e5eeb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "levelup-private"
            },
            "tags_all": {
              "Name": "levelup-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.levelup-nat",
            "aws_internet_gateway.levelup-gw",
            "aws_nat_gateway.levelup-nat-gw",
            "aws_subnet.levelupvpc-public-1",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "levelup-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:route-table/rtb-0b7ddabb70e10a10c",
            "id": "rtb-0b7ddabb70e10a10c",
            "owner_id": "053022822739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e74bcc6a49350fd2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "levelup-public-1"
            },
            "tags_all": {
              "Name": "levelup-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "level-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02099d9df48d6ed49",
            "route_table_id": "rtb-0ca65cf1fb8fb7dac",
            "subnet_id": "subnet-0c6d626ba7fe0fb49"
          },
          "dependencies": [
            "aws_eip.levelup-nat",
            "aws_internet_gateway.levelup-gw",
            "aws_nat_gateway.levelup-nat-gw",
            "aws_route_table.levelup-private",
            "aws_subnet.levelupvpc-private-1",
            "aws_subnet.levelupvpc-public-1",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "level-private-1-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085960809ba08ae1c",
            "route_table_id": "rtb-0ca65cf1fb8fb7dac",
            "subnet_id": "subnet-092b473bc00bf89d3"
          },
          "dependencies": [
            "aws_eip.levelup-nat",
            "aws_internet_gateway.levelup-gw",
            "aws_nat_gateway.levelup-nat-gw",
            "aws_route_table.levelup-private",
            "aws_subnet.levelupvpc-private-2",
            "aws_subnet.levelupvpc-public-1",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "level-private-1-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01879b4435f988599",
            "route_table_id": "rtb-0ca65cf1fb8fb7dac",
            "subnet_id": "subnet-0f4449223dbadad60"
          },
          "dependencies": [
            "aws_eip.levelup-nat",
            "aws_internet_gateway.levelup-gw",
            "aws_nat_gateway.levelup-nat-gw",
            "aws_route_table.levelup-private",
            "aws_subnet.levelupvpc-private-3",
            "aws_subnet.levelupvpc-public-1",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ed338d20f6f5fd9",
            "route_table_id": "rtb-0b7ddabb70e10a10c",
            "subnet_id": "subnet-04a2f8ac7a3e28a2b"
          },
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-1",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ef78901c96f6d6e",
            "route_table_id": "rtb-0b7ddabb70e10a10c",
            "subnet_id": "subnet-05a607af2eef5718a"
          },
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-2",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "levelup-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f458f1ea8c8224f9",
            "route_table_id": "rtb-0b7ddabb70e10a10c",
            "subnet_id": "subnet-0b4b8b5f842b8286b"
          },
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_route_table.levelup-public",
            "aws_subnet.levelupvpc-public-3",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:subnet/subnet-0c6d626ba7fe0fb49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6d626ba7fe0fb49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053022822739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelupvpc-private-1"
            },
            "tags_all": {
              "Name": "levelupvpc-private-1"
            },
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:subnet/subnet-092b473bc00bf89d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092b473bc00bf89d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053022822739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelupvpc-public-2"
            },
            "tags_all": {
              "Name": "levelupvpc-public-2"
            },
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:subnet/subnet-0f4449223dbadad60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4449223dbadad60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053022822739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelupvpc-private-3"
            },
            "tags_all": {
              "Name": "levelupvpc-private-3"
            },
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:subnet/subnet-04a2f8ac7a3e28a2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a2f8ac7a3e28a2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "053022822739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelupvpc-public-1"
            },
            "tags_all": {
              "Name": "levelupvpc-public-1"
            },
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:subnet/subnet-05a607af2eef5718a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a607af2eef5718a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "053022822739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelupvpc-public-2"
            },
            "tags_all": {
              "Name": "levelupvpc-public-2"
            },
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "levelupvpc-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:subnet/subnet-0b4b8b5f842b8286b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4b8b5f842b8286b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "053022822739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "levelupvpc-public-3"
            },
            "tags_all": {
              "Name": "levelupvpc-public-3"
            },
            "vpc_id": "vpc-0f1cbe4a974ac9a18"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "levelupvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:053022822739:vpc/vpc-0f1cbe4a974ac9a18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066f536666dea4b10",
            "default_route_table_id": "rtb-0d39cb8d8423c32d9",
            "default_security_group_id": "sg-0535c1ce309d7daa7",
            "dhcp_options_id": "dopt-0c052233ad2b3bcd3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1cbe4a974ac9a18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d39cb8d8423c32d9",
            "owner_id": "053022822739",
            "tags": {
              "Name": "level-up"
            },
            "tags_all": {
              "Name": "level-up"
            }
          }
        }
      ]
    }
  ]
}